--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <div id="root"></div>    
     <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-auth.js"></script>
     <script>
       // Initialize Firebase
       var config = {
